--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -2,123 +2,84 @@
   "data": [
     {
       "id": "R_kgDOJWL0-g",
-      "name": "mdp-diffusion",
-      "createdAt": "2023-04-13T04:18:19Z",
-      "url": "https://github.com/ashutosh1919/mdp-diffusion",
-      "description": "Text-guided image editing by manipulating diffusion path without any training.",
-      "isFork": false,
-      "languages": [
-        {
-          "name": "Python",
-          "iconifyClass": "logos-python"
-        },
-        {
-          "name": "Shell",
-          "iconifyClass": "simple-icons:shell"
-        },
-        {
-          "name": "Jupyter Notebook",
-          "iconifyClass": "logos-jupyter"
-        }
-      ]
+      "name": "DraftKings Sportsbook",
+      "url": "https://sportsbook.draftkings.com/",
+      "image": "DraftkingsSportsbook.png",
+      "period": "2018-2023",
+      "roles": [
+        "Revamped the sports betting platform using Next.js and TypeScript, resulting in a 35% increase in user retention and 50% faster page load times using Server side rendering",
+        "Pioneered a real-time odds calculation system using WebSocket (STOMP), handling 100,000+ concurrent users with 99.99% uptime",
+        "Introduced a role-based authentication system using Auth0 and Okta, reducing security incidents by 90% while maintaining compliance"
+      ],
+      "description": "Leading online sports betting platform that allows users to place wagers on a wide variety of sports and events",
+      "isFork": false
     },
     {
-      "id": "R_kgDOG_vYHA",
-      "name": "explainable-cnn",
-      "createdAt": "2022-03-13T20:41:33Z",
-      "url": "https://github.com/ashutosh1919/explainable-cnn",
-      "description": "📦 PyTorch based visualization package for generating layer-wise explanations for CNNs.",
-      "isFork": false,
-      "languages": [
-        {
-          "name": "Python",
-          "iconifyClass": "logos-python"
-        }
-      ]
+      "id": "R_kgDOJWL0-g",
+      "name": "Arcee Cloud",
+      "url": "https://www.arcee.ai/product/arceecloud",
+      "image": "arcee.png",
+      "period": "2024",
+      "roles": [
+        "Orchestrated the development of interactive AI model visualization interfaces using React Flow and D3.js, creating intuitive diagrams for machine learning pipelines",
+        "Engineered real-time AI model monitoring dashboards that tracked model performance, training metrics, and inference results",
+        "Leveraged Open WebUI's comprehensive features including its intuitive Model Builder, RAG integration, multi-model support, and pipeline framework"
+      ],
+      "description": "Seamlessly Merge, Train, & Deploy your own Small Language Models (SLMs) in a few clicks",
+      "isFork": false
     },
     {
-      "id": "MDEwOlJlcG9zaXRvcnkyNDU0NjcyNzQ=",
-      "name": "masterPortfolio",
-      "createdAt": "2020-03-06T16:26:54Z",
-      "url": "https://github.com/ashutosh1919/masterPortfolio",
-      "description": "🔥 The Complete Customizable Software Developer Portfolio Template which lets you showcase your work and provides each and every detail about you as Software Developer.",
-      "isFork": false,
-      "languages": [
-        {
-          "name": "HTML",
-          "iconifyClass": "logos-html-5"
-        },
-        {
-          "name": "CSS",
-          "iconifyClass": "logos-css-3"
-        },
-        {
-          "name": "JavaScript",
-          "iconifyClass": "logos-javascript"
-        },
-        {
-          "name": "Dockerfile",
-          "iconifyClass": "simple-icons:docker"
-        }
-      ]
+      "id": "R_kgDOJWL0-g",
+      "name": "FoxyAI",
+      "url": "https://foxyai.com/",
+      "image": "foxyAI.png",
+      "period": "2023-2024",
+      "roles": [
+        "Established an AI-driven image recognition platform using React, Next.js, and TailwindCSS, increasing user engagement by 200% and reducing bounce rates by 45%",
+        "Implemented a sophisticated machine learning pipeline using FastAPI and AWS Lambda, processing 50,000+ images daily with 98% accuracy",
+        "Architected migration from monolith to microservices using Docker, Terraform and AWS ECS, reducing dev-ops costs by 60% and improving system scalability"
+      ],
+      "description": "Specializing in artificial intelligence and computer vision solutions for automated analysis of property",
+      "isFork": false
     },
     {
-      "id": "R_kgDOG0_8uQ",
-      "name": "react-awesome-shapes",
-      "createdAt": "2022-02-11T14:50:20Z",
-      "url": "https://github.com/ashutosh1919/react-awesome-shapes",
-      "description": "🌀 Insert Awesome Shapes into Your React Site with Ease.",
-      "isFork": false,
-      "languages": [
-        {
-          "name": "HTML",
-          "iconifyClass": "logos-html-5"
-        },
-        {
-          "name": "CSS",
-          "iconifyClass": "logos-css-3"
-        },
-        {
-          "name": "Shell",
-          "iconifyClass": "simple-icons:shell"
-        },
-        {
-          "name": "JavaScript",
-          "iconifyClass": "logos-javascript"
-        }
-      ]
+      "id": "R_kgDOJWL0-g",
+      "name": "Microsoft VivaGoals",
+      "url": "https://www.microsoft.com/en-us/microsoft-viva/goals",
+      "image": "vivagoals.png",
+      "period": "2023-2024",
+      "roles": [
+        "Revolutionized the front-end architecture using NX monorepos and Vite, improving build times by 70% and developer productivity by 45%",
+        "Planned comprehensive testing strategies with Jest and Cypress, achieving 90% test coverage and reducing production bugs by 75%"
+      ],
+      "description": "Innovative platform designed to streamline goal-setting and performance management across organizations.",
+      "isFork": false
     },
     {
-      "id": "R_kgDOGcPKSQ",
-      "name": "neuro-symbolic-sudoku-solver",
-      "createdAt": "2021-11-26T17:56:07Z",
-      "url": "https://github.com/ashutosh1919/neuro-symbolic-sudoku-solver",
-      "description": "⚙️ Solving sudoku using Deep Reinforcement learning in combination with powerful symbolic representations.",
-      "isFork": false,
-      "languages": [
-        {
-          "name": "Python",
-          "iconifyClass": "logos-python"
-        }
-      ]
+      "id": "R_kgDOJWL0-g",
+      "name": "Just A Menu",
+      "url": "https://www.justamenu.com/",
+      "image": "justamenu.png",
+      "period": "2024",
+      "roles": [
+        "Crafted a Photoshop-like menu editor using React Konva and Shadcn UI, increasing user satisfaction by 85% and reducing menu creation time by 65%",
+        "Built high-performance image processing using AWS Lambda, S3, CloudFront, OpenCV, and Puppeteer optimizing storage costs by 93% with high quality"
+      ],
+      "description": "Creating stunning Menus with JAM, and update them all instantly from an easy to use online dashboard",
+      "isFork": false
     },
     {
-      "id": "MDEwOlJlcG9zaXRvcnkzMjU5NDM1MTE=",
-      "name": "react-liquidswipe",
-      "createdAt": "2021-01-01T08:31:51Z",
-      "url": "https://github.com/ashutosh1919/react-liquidswipe",
-      "description": "🚀 Smooth Liquid Swipe Animation to transition between different components.",
-      "isFork": false,
-      "languages": [
-        {
-          "name": "JavaScript",
-          "iconifyClass": "logos-javascript"
-        },
-        {
-          "name": "CSS",
-          "iconifyClass": "logos-css-3"
-        }
-      ]
+      "id": "R_kgDOJWL0-g",
+      "name": "Qardio",
+      "url": "https://www.qardio.com/qardiomd-rpm/",
+      "image": "qardio.png",
+      "period": "2013-2018",
+      "roles": [
+        "Engineered a real-time ECG monitoring system using Angular and Canvas, enabling continuous cardiac data streaming that increased patient monitoring accuracy",
+        "Collaborated with cross-functional teams to build a HIPAA-compliant data pipeline using AWS Kinesis, Lambda, and DynamoDB, successfully processing of patient data"
+      ],
+      "description": "Fully Integrated Remote Patient Monitoring (RPM) and Telehealth Solution",
+      "isFork": false
     }
   ]
 }
